# x11proto-xsp

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  xspproto.h  xspproto.pc.in  xspwire.h
debian/: changelog  control  copyright  rules  x11proto-xsp-dev.install
